--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas
-numpy
-matplotlib
-casadi
-ipython
-scipy
-joblib
-cmake
+pandas==1.5.3
+numpy==1.20.3
+matplotlib==3.4.3
+casadi==3.5.5
+ipython==8.18.1
+scipy==1.7.3
+joblib==1.5.2
+cmake==3.29.6
